# gea

./: .gitignore  LICENSE  README.md  cnn.py  data.py  dbg.py  preprocess.ipynb  pyproject.toml  train.py
