[project]
name = "gea"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "plotnine>=0.15.0",
    "polars>=1.31.0",
    "pyarrow>=21.0.0",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "wandb>=0.21.0",
]
